UI CHANGES | hamburger menu animation, dark mode/light mode fixes, minor responsive design changes

--- a/src/components/CustomButtons/Button.module.scss
+++ b/src/components/CustomButtons/Button.module.scss
@@ -46,7 +46,6 @@
       top: $borderW*1.5;
       width: 100%;
       height: 100%;
-  
       transition: all 0.3s 0.2s;
       border-radius:30px;
     }
@@ -115,14 +114,15 @@
     // Light mode styles
   &.light {
     color: $white;
+  
     .blob-btn__inner {
-      background-color: $dark-purple; 
+      background-color: $pink; 
     }
     .blob-btn__blob {
       background-color: $white;
     }    
     &:hover {
-       color: $dark-purple;
+       color: $pink;
       &:blob-btn__blob {
         background-color: $white; 
       }
